# pandemic-llm-repro

./: .gitignore  ETL_QA.md  FORECAST_REPORT.md  PHC_STRATEGIC_ASSESSMENT.md  README.md  inspect_detailed.py  inspect_df.py  meta.json  pyproject.toml
src/pandemic_llm_repro/: __init__.py  analyze_data.py  analyze_rigorous.py  data_loader.py  diagnostic_suffix.py  etl.py  eval.py  fine_tune.py  fine_tune_manual.py  fine_tune_ordinal.py  fine_tune_simple.py  fine_tune_wmse.py  predict_2026.py  prediction_logger.py  prepare_data.py  (+7 more)
tests/: test_data_loader.py  test_etl_critical_dna.py  test_etl_fidelity.py  test_etl_integrity_final.py  test_etl_leakage_and_balance.py  test_etl_methodology_gaps.py  test_fidelity_audit.py  test_integration_fidelity.py  test_methodological_drift.py  test_paper_fidelity.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm3d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  UnslothRLOOTrainer.py  UnslothRewardTrainer.py  UnslothSFTTrainer.py  UnslothXPOTrainer.py  unsloth_compiled_module_gemma3.py  unsloth_compiled_module_siglip.py
