[project]
name = "pandemic-llm-repro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "pawngrubber", email = "pawngrubber@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "bitsandbytes>=0.49.1",
    "datasets>=4.3.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.1",
    "pandas>=3.0.0",
    "peft>=0.18.1",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "torchvision>=0.25.0",
    "transformers>=4.57.6",
    "trl>=0.24.0",
    "unsloth>=2026.1.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
